# shiru

./: Cargo.toml  README.md
src/: colorful.rs  highlight.rs  lib.rs  parse.rs  shiru_cpp.rs  shiru_python.rs
structure/cpp/: Cargo.toml
structure/cpp/src/: main.rs
structure/python/: Cargo.toml
structure/python/src/: main.rs
