[package]
name = "shiru"
version = "0.1.3.1"
authors = ["\"ferhatgec\""]
edition = "2018"
description = "Extensible syntax highlighting engine, Rust implementation of ShiC++"
keywords = ["term", "syntax", "color", "engine", "rust"]
readme = "README.md"
repository = "https://github.com/ferhatgec/shiru"
documentation = "https://docs.rs/shiru"
license = "MIT"

include = [
    ".gitignore",
    "Cargo.toml",

    "src/lib.rs",
    "src/colorful.rs",
    "src/highlight.rs",
    "src/parse.rs",

    "src/shiru_cpp.rs",
    "src/shiru_python.rs"
]

[dependencies]
